formulaire éffectué+ fieldset

--- a/index.html
+++ b/index.html
@@ -33,29 +33,32 @@
                         <option value="10">10</option>
                     </select>
                 </label>
-                <div>
-                    <label>
-                        <input type="radio" name="sexe" value="Homme"> H
-                    </label>
-                    <label>
-                        <input type="radio" name="sexe" value="Femme"> F
-                    </label>
-                    <label>
-                        <input type="radio" Name="sexe" value="non-binaire"> X
-                    </label>
-                </div>
+                <fieldset>
+                    <div>
+                        <label>
+                            <input type="radio" name="sexe" value="Homme"> H
+                        </label>
+                        <label>
+                            <input type="radio" name="sexe" value="Femme"> F
+                        </label>
+                        <label>
+                            <input type="radio" Name="sexe" value="non-binaire"> X
+                        </label>
+                    </div>
 
-                <div>
-                    <label>
-                        <input type="checkbox" name="sexe" value="Homme"> H
-                    </label>
-                    <label>
-                        <input type="checkbox" name="sexe" value="Femme"> F
-                    </label>
-                    <label>
-                        <input type="checkbox" Name="sexe" value="non-binaire"> X
-                    </label>
-                </div>
+                    <div>
+                        <label>
+                            <input type="checkbox" name="sexe" value="Homme"> H
+                        </label>
+                        <label>
+                            <input type="checkbox" name="sexe" value="Femme"> F
+                        </label>
+                        <label>
+                            <input type="checkbox" Name="sexe" value="non-binaire"> X
+                        </label>
+                    </div>
+                </fieldset>
+
 
                 <input type="reset">
                 <input type="submit">
