formulaire éffectué+ fieldset

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div align="center">
         <div style="width: 300px" border="1" align="center">
-            <form action="" style="border: solid 1px black">
+            <form action="mailto:coquelet.samuel@gmail.com" style="border: solid 1px black">
                 <label for=""></label><textarea name="story" id="" cols="30" rows="10"></textarea>
                 <label>
                     <input type="password" name="password" placeholder="mot de passe">
